--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Bubbles&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Audiowide');
 
 
 nav ul{
@@ -14,6 +15,8 @@ nav{
     padding: 20px;
     align-items: center;
     font-size: 40px;
+    animation-name: example;
+    animation-duration: 4s;
     justify-content: center;
     font-family: 'Rubik Bubbles', cursive;
 }
@@ -25,10 +28,10 @@ nav{
 
 .gamecontainer{
 
-    background-color: aqua;
+    background-color: none;
     display: flex;
     justify-content: center;
-    margin-top: 60px;
+    margin-top: 65px;
 }
 
 .container{
@@ -50,5 +53,26 @@ nav{
 
 .box :hover{
 
-    background-color: rgb(252, 244, 179);
+    background-color: rgb(223, 241, 251);
+}
+
+.bt-0{
+    border-top: 0;
+}
+
+.br-0{
+    border-right: 0;
+}
+
+.bl-0{
+    border-left: 0;
+}
+
+.bb-0{
+    border-bottom: 0;
+}
+
+.gameinfo{
+    padding: 40px;
+    font-family: "Audiowide", sans-serif;
 }
