--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ nav ul{
     list-style-type: none;
 }
 
+.name{
+    text-align: center;
+    display: flex;
+    background-color: rgb(255, 218, 218);
+    justify-content: center
+}
+
 nav{
     background-color: rgb(200, 29, 185);
     color: rgb(209, 240, 255);
@@ -28,10 +35,12 @@ nav{
 
 .gamecontainer{
 
-    background-color: none;
+    background-color: #c9fafe;
     display: flex;
     justify-content: center;
-    margin-top: 65px;
+    margin-top: 3px;
+    display: flex;
+    margin-bottom: 6px;
 }
 
 .container{
@@ -53,7 +62,7 @@ nav{
 
 .box :hover{
 
-    background-color: rgb(223, 241, 251);
+    background-color: rgb(195, 235, 255);
 }
 
 .bt-0{
@@ -74,5 +83,38 @@ nav{
 
 .gameinfo{
     padding: 40px;
+    font-size: 1.8rem;
     font-family: "Audiowide", sans-serif;
+}
+
+.imagebox img{
+    width: 0;
+    transition: width is ease-in-out;
+
+}
+
+#reset{
+    padding: 5px;
+    border-radius: 8px;
+    cursor: pointer;
+    background: rgb(191, 250, 250);
+}
+
+@media screen and (max-width: 800px)
+{
+
+    .gamecontainer{
+        flex-wrap: wrap;
+    }
+    .gameinfo{
+        margin-top: 5px;
+    }
+    .gameinfo{
+        font-size: 1.5rem;
+    }
+    .container{
+        display: grid;
+        grid-template-rows: repeat(3 , 20vw);
+        grid-template-columns: repeat(3 , 20vw);
+    }
 }
